--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,17 +35,17 @@ jobs:
 
       - name: Clean up
         run: docker system prune -f
-  # deploy_to_vps:
-  #   runs-on: ubuntu-latest
-  #   needs: docker
-  #   if: github.event_name == 'workflow_dispatch'
-  #   steps:
-  #     - name: Deploy to VPS
-  #       uses: appleboy/ssh-action@v1.0.3
-  #       with:
-  #         host: ${{ secrets.VPS_HOST }}
-  #         username: ${{ secrets.VPS_USER }}
-  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         port: ${{ secrets.VPS_PORT }}
-  #         script: |
-  #           docker stack deploy -c /opt/web/docker-compose.prod.yaml ms-portfolio
+  deploy_to_vps:
+    runs-on: ubuntu-latest
+    needs: docker
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            docker stack deploy -c /opt/web/docker-compose.prod.yaml next-app-deploy
